# Grapghing_calculator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
Application/: app.cpp  app.h  app.hpp  calculator.cpp  calculator.h  calculator.hpp  canvas.cpp  canvas.h  canvas.hpp  function_tools.cpp  function_tools.h  function_tools.hpp  graph.cpp  graph.h  manual.cpp  manual.h  manual.hpp  menu.cpp  menu.h  menu.hpp  plot.cpp  plot.h  useful_functions.cpp  useful_functions.h  window.cpp  window.h
Application/UI/: button.cpp  button.h  caption.cpp  caption.h  object.cpp  object.h  textbox.cpp  textbox.h
az_math_library/include/: azmath.h
cmake/: Findaz_math.cmake
